hard-gists/4cd70e9515ab722b2bce/run.log
=== Docker Run Log for 4cd70e9515ab722b2bce ===
Started at: Mi 29. Okt 15:11:59 CET 2025

[2025-10-29 15:12:00] START: Running container for 4cd70e9515ab722b2bce
[2025-10-29 15:12:00] SUCCESS: Container d510c216e9fbfae5b5e7ce1415b8ea10422166ed1e646977a1f03c1ccd54573e started for 4cd70e9515ab722b2bce
=== Container logs for 4cd70e9515ab722b2bce ===
  File "/snippet.py", line 103
    print 'Extracting frames...'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4cd70e9515ab722b2bce ===
[2025-10-29 15:12:02] INFO: Container d510c216e9fbfae5b5e7ce1415b8ea10422166ed1e646977a1f03c1ccd54573e has stopped
